# neomatrix

./: .gitignore  .gitmodules  LICENSE.md  README.md  restyle.sh
sim/: CMakeLists.txt  matrix.cpp  matrix.hpp
src/: Makefile  balls.cpp  balls.hpp  common.cpp  common.hpp  coord.cpp  coord.hpp  counter.hpp  display.hpp  fire.cpp  fire.hpp  framelimiter.cpp  framelimiter.hpp  hal9k-glitter.cpp  hal9k-letter.cpp  hal9k-letter.hpp  hal9k-paint.cpp  hal9k-paint.hpp  hal9k-rainbow.cpp  hal9k-wipe.cpp  hal9k.cpp  hsv2rgb.cpp  hsv2rgb.hpp  lemmings.cpp  lemmings.hpp  matrix.cpp  matrix.hpp  metaballs.cpp  metaballs.hpp  moire.cpp  moire.hpp  neomatrix.cpp  neomatrix.hpp  neomatrix.ino  ota.cpp  ota.hpp  pixel.hpp  program.cpp  program.hpp  restyle.sh  (+7 more)
tools/: gen-lemmings-data.rb
